# omnilimb-face

./: .gitignore  COMMERCIAL-LICENSE.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  __init__.py  hermes_chat_worker.py  plugin.yaml  preview.py  pyproject.toml  release.ps1  start.bat
.github/workflows/: ci.yml
docs/: AVATAR_INTEGRATION.md  GUIDE.md
models/: model_dict.json
omnilimb_face/: __init__.py  __main__.py  chunker.py  config.py  expression.py  frontend_server.py  interruption.py  live2d.py  llm_bridge.py  plugin.py  preview.py  runtime.py  stt.py  tts.py
omnilimb_face/frontend/: README.md  app.js  avatar.js  index.html  live3d-renderer.js  orb-renderer.js  protocol.js  renderer-manager.js  status-panel.js  styles.css
omnilimb_face/frontend/tests/: .gitignore  README.md  design-system.test.js  interface-conformance.test.js  live3d-renderer.test.js  orb-renderer.test.js  package-lock.json  package.json  property-01-switch-structural-invariant.test.js  property-02-init-failure-rollback.test.js  property-03-setmouthopen-clamp.test.js  property-04-interface-noop-safety.test.js  property-05-resolve-normalization.test.js  property-06-protocol-backcompat.test.js  property-08-persistence-roundtrip.test.js  property-09-switch-event-continuity.test.js  property-10-degrade-chain.test.js  property-12-status-panel.test.js  property-16-setexpression-single-active.test.js  property-17-no-active-renderer.test.js  property-19-live3d-blink-interval.test.js  property-20-live3d-load-failure.test.js  property-21-design-tokens.test.js  renderer-manager-degrade.test.js  renderer-manager-switch.test.js  renderer-settings.test.js  smoke.test.js  status-panel.test.js
omnilimb_face/frontend/tests/helpers/: conformance.js  load-frontend.js
omnilimb_face/protocol/: __init__.py  events.py  gateway.py  router.py
omnilimb_face/voice/: __init__.py  capture.py  vad.py  wake_word.py
site/: demo.html  index.html
tests/: __init__.py  conftest.py  test_integration.py  test_properties.py  test_units.py
