[build-system]
requires = ["setuptools>=68,<76", "wheel>=0.42,<0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "omnilimb-face"
version = "0.1.3"
description = "Open-LLM-VTuber capabilities (hands-free voice, barge-in, Live2D avatar) as a hermes-agent plugin."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "seanyang1983", email = "yase19636404@163.com" }]
keywords = ["hermes-agent", "plugin", "vtuber", "live2d", "live3d", "tts", "stt", "voice"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

# Core runtime dependencies.
#
# IMPORTANT (Requirement 12.1): the CORE install MUST NOT pull in the optional
# voice / Live2D stack, so the plugin can still register in a *degraded* state
# when those packages are absent. Voice capture, VAD, wake-word and front-end
# static-serving packages therefore live in the optional extras below.
#
# Every dependency carries an upper bound per the hermes Dependency Pinning
# Policy (post-1.0: >=floor,<next_major; pre-1.0: >=floor,<0.(minor+2)).
dependencies = [
  # /client-ws protocol gateway WebSocket transport (Requirement 9).
  # Compatible with both the legacy (12.x) and new asyncio (13–15.x) APIs;
  # the gateway reads the request path defensively across both (see
  # ProtocolGateway._extract_request_path), so it runs against the host's
  # websockets when installed into hermes (which ships 15.x).
  "websockets>=12.0,<16",
  # Front-end static asset serving for the avatar UI (Requirement 7) — needed
  # so a plain `pip install omnilimb-face` can serve the avatar page.
  "starlette>=0.37,<0.42",
  "uvicorn>=0.30,<0.35",
  # Keyless voice OUT: Microsoft Edge online voices, so the avatar TALKS without
  # a host LLM/TTS (GPL-3.0; installed separately via pip, not bundled).
  "edge-tts>=6.1,<8",
  # Self-signed cert generation for `omnilimb-face --https` (lets phones on the
  # LAN use the microphone via a secure context).
  "cryptography>=42,<46",
]

[project.optional-dependencies]
# Hands-free server-side MICROPHONE capture + voice-activity detection
# (Requirements 4, 5) — used by the hermes plugin's hands-free path. The preview
# captures the mic in the BROWSER instead, so it does not need this. On a host
# without PortAudio `import sounddevice` raises OSError, so it is kept opt-in to
# keep the default install clean and cross-platform. webrtcvad-wheels ships
# PREBUILT wheels (same `import webrtcvad`) so install needs no C compiler.
voice = [
  "sounddevice>=0.4.6,<0.7",
  "webrtcvad-wheels>=2.0.10,<3",
  "numpy>=1.24,<3",
]

# Optional local speech-to-text for the preview's `--stt` (browser mic audio ->
# faster-whisper). HEAVY (pulls onnxruntime / ctranslate2 / scipy, hundreds of
# MB), so it is kept opt-in. Absent -> STT disabled (you can still TYPE; voice
# OUT still works).
stt = [
  "faster-whisper>=1.0,<2",
]

# Optional wake-word activation (Requirement 13). Absent -> wake-word disabled.
wakeword = [
  "openwakeword>=0.6.0,<0.8",
]

# Test tooling: pytest for unit/integration tests, Hypothesis for the
# property-based tests mandated by the design (>= 100 examples each).
test = [
  "pytest>=8.0,<9",
  "hypothesis>=6.100,<7",
]

# Developer tooling (superset of `test`).
dev = [
  "pytest>=8.0,<9",
  "hypothesis>=6.100,<7",
]

# The default `pip install omnilimb-face` already renders the avatar, TALKS
# (Edge-TTS) and takes typed input. `[all]` adds the full voice loop: hands-free
# microphone capture, local speech-to-text and wake-word:
#   pip install "omnilimb-face[all]"
all = [
  "omnilimb-face[voice,stt,wakeword]",
]

# Discovered by hermes PluginManager via the `hermes_agent.plugins` entry-point
# group (confirmed in hermes_cli/plugins.py: ENTRY_POINTS_GROUP). The value
# resolves to a module exposing `register`, which the host loads via
# `ep.load()` then `getattr(module, "register")` (Requirement 1.6).
[project.entry-points."hermes_agent.plugins"]
omnilimb-face = "omnilimb_face.plugin"

# One-command standalone preview: after `pip install "omnilimb-face[all]"`, the
# `omnilimb-face` command launches the front-end + /client-ws gateway and opens
# the browser — no source checkout needed. Same args as the old `python
# preview.py` (e.g. `omnilimb-face --no-browser`, `omnilimb-face --lan --https`).
[project.scripts]
omnilimb-face = "omnilimb_face.preview:main"

[project.urls]
Homepage = "https://github.com/seanyang1983/omnilimb-face"
Repository = "https://github.com/seanyang1983/omnilimb-face"
Issues = "https://github.com/seanyang1983/omnilimb-face/issues"

[tool.setuptools]
# Explicit package list disables flat-layout auto-discovery (which would trip
# over the directory-install root `__init__.py` and the `tests/` package).
packages = [
  "omnilimb_face",
  "omnilimb_face.voice",
  "omnilimb_face.protocol",
]
# Ship the AGPL-3.0 license text inside the built wheel/sdist (glob form is
# compatible with setuptools < 77 / pre-PEP-639 metadata).
license-files = ["LICENSE"]

# Ship the front-end avatar UI as package data INSIDE the wheel so a plain
# `pip install omnilimb-face` carries the renderers (Live2D/Live3D), the
# companion sound-wave Orb, the layout switcher, protocol client and styles.
# Only the flat runtime assets are bundled — the JS test harness under
# `frontend/tests/` (and its node_modules) is intentionally NOT matched by the
# top-level `frontend/*` globs, so it never ends up in the distribution.
[tool.setuptools.package-data]
omnilimb_face = [
  "frontend/*.html",
  "frontend/*.js",
  "frontend/*.css",
  "frontend/*.md",
  # Live2D model dictionary, so the `omnilimb-face` preview command renders the
  # reference avatar (loaded from CDN) without a source checkout.
  "models/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
